--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.10",
     "@ai-sdk/react": "^1.2.8",
+    "@ai-sdk/xai": "^1.2.11",
     "@clerk/nextjs": "^6.14.3",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
